kubernetes/app/kevinnitrohomelab/web/web/deployment.patch.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-web
spec:
  template:
    spec:
      containers:
        - name: web

  selector: {}
